# tiny_python_projects

./: pyproject.toml
01_hello/: hello.py  hello2.py
02_crowsnest/: crowsnest.py  test.py
03_picnic/: picnic.py  test.py
04_jump_the_five/: Makefile  jump.py  test.py
05_howler/: Makefile  howler.py  test.py
05_howler/outputs/: foo bar grock
06_wc/: Makefile  test.py  wc.py
07_gashlycrumb/: Makefile  gashlycrumb.py
08_apples_and_bananas/: Makefile  apples.py  test.py
09_abuse/: Makefile  abuse.py  test.py
09_abuse/data/: adjectives.txt  adjectives2.txt  nouns.txt  nouns2.txt
10_telephone/: Makefile  telephone.py
11_bottles_of_beer/: Makefile  bottles.py  test.py
