[tool.poetry]
name = "tiny-python-projects"
version = "0.1.0"
description = ""
authors = ["ringbolt60 <90988457+ringbolt60@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tiny_python_projects"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

