[tool.poetry]
name = "tiny-python-projects"
version = "0.1.0"
description = ""
authors = ["ringbolt60 <90988457+ringbolt60@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "tiny_python_projects"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"
black = "^23.7"
flake8 = "^6.1.0"
ipython = "^8.14"
mypy = "^1.5.1"
pylint = "^3.0.0a7"
yapf = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

